src/objects/Competitive_Analysis_Request__c.object
<CustomObject>
    <description>Competitive Analysis is used to track Competitor information</description>
    <fields>
        <fullName>Call_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Note</label>
        <referenceTo>Activity_Detail__c</referenceTo>
        <relationshipName>Competitive_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Competitive_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Competitive_Analysis_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_completed_in_days__c</fullName>
        <formula>IF( NOT(ISBLANK(Completed_Date__c )) ,Completed_Date__c - DATEVALUE(CreatedDate) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request completed in (days):</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Generate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Morningstar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brightscope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Benchmarker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypothetical Illustration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matrix Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morningstar (Plan Status and Plan Comparison)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morningstar Target Data Analyzer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitive Analysis Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Me</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Call_Note__c</columns>
        <columns>Request_Report__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>Assigned to Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Competitive_Analysis_Team_Competitive_Analysis</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Report__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Call_Note__c</columns>
        <filterScope>Queue</filterScope>
        <label>Competitive Analysis Team</label>
        <language>en_US</language>
        <queue>Competitive_Analysis_Team</queue>
    </listViews>
    <listViews>
        <fullName>DC_Team_Competitive_Analysis_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Team</label>
        <queue>DC_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Track_Status</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Call_Note__c</columns>
        <columns>Request_Report__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Track</value>
        </filters>
        <label>Track Status</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Competitive Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Analysis Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>